# mergit

./: .bazelrc  .dockerignore  .env.template  .gitattributes  .gitignore  .hlint.yaml  .lymerge.yaml  .mergit.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPER.md  Dockerfile  README.md  WORKSPACE  codegen.yml  hpack.yaml  stack.yaml
.circleci/: config.yml
aeson-schemas/: BUILD  BUILD.bazel  package.yaml
aeson-schemas/src/Data/Aeson/Schema/: Internal.hs  Show.hs  TH.hs
aeson-schemas/src/Data/Aeson/Schema/TH/: Enum.hs  Get.hs  Getter.hs  Parse.hs  Schema.hs  Unwrap.hs  Utils.hs
aeson-schemas/test/: AllTypes.hs  Main.hs  Util.hs
aeson-schemas/test/goldens/: maybeListNull_bang.golden  schema_def_bool.golden  schema_def_custom.golden  schema_def_double.golden  schema_def_extend.golden  schema_def_import_user.golden  schema_def_int.golden  schema_def_list.golden  schema_def_list_obj.golden  schema_def_maybe.golden  schema_def_maybe_obj.golden  schema_def_obj.golden  schema_def_shadow.golden  schema_def_text.golden  unwrap_schema.golden  unwrap_schema_bad_bang.golden  unwrap_schema_bad_key.golden  unwrap_schema_bad_list.golden  unwrap_schema_bad_question.golden
bazel/: prelude.bzl
conf/: cookie-jwk.pem
core/: package.yaml
deploy/: README.md  ansible_hosts.tpl  env.j2  install-mergit.yml  main.tf  merge-bot.service  mergit.service  outputs.tf  variables.tf
github-rest/: package.yaml
github-schemas/: package.yaml
graphql/: README  package.yaml
lib/: package.yaml
merge-bot/: package.yaml
merge-bot-core/: README.md  package.yaml
(+403 files in other folders)
