haskell_library(
    name = "aeson-schemas",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src/",
    deps = [
        hazel_library("aeson"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("first-class-families"),
        hazel_library("megaparsec"),
        hazel_library("template-haskell"),
        hazel_library("text"),
        hazel_library("unordered-containers"),
    ],
)
